translation-tool/inputs/source_meta/objects/HNSCASENOTESVIEW__x.object
<CustomObject>
    <description>HNSCASENOTESVIEW</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HNSCASENOTESVIEW</externalName>
    <fields>
        <fullName>ADDED_BY__c</fullName>
        <description>ADDED_BY</description>
        <externalDeveloperName>ADDED_BY</externalDeveloperName>
        <label>Added By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <description>CASE_ID</description>
        <externalDeveloperName>CASE_ID</externalDeveloperName>
        <label>CASE_ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATETIME_ADDED__c</fullName>
        <description>DATETIME_ADDED</description>
        <externalDeveloperName>DATETIME_ADDED</externalDeveloperName>
        <label>Datetime added</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUMMARY__c</fullName>
        <description>SUMMARY</description>
        <externalDeveloperName>SUMMARY</externalDeveloperName>
        <label>Summary and Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>HNSCASENOTESVIEW</label>
    <pluralLabel>HNSCASENOTESVIEW</pluralLabel>
</CustomObject>